Update build, add tests

--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,9 @@
   ],
   "dependencies": {
     "purescript-arrays": "*"
+  },
+  "devDependencies": {
+    "purescript-quickcheck": "*",
+    "purescript-math": "*"
   }
 }
