--- a/bower.json
+++ b/bower.json
@@ -18,8 +18,8 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-arrays": "~0.2.0",
-    "purescript-monoid": "*",
-    "purescript-control": "~0.2.0"
+    "purescript-arrays": "~0.3.0",
+    "purescript-monoid": "~0.1.4",
+    "purescript-control": "~0.2.1"
   }
 }
