--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "package.json"
   ],
   "dependencies": {
+    "purescript-arrays": "~0.3.0",
     "purescript-monoid": "~0.1.4",
     "purescript-control": "~0.2.1"
   }
