--- a/bower.json
+++ b/bower.json
@@ -6,17 +6,21 @@
     "purescript"
   ],
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/purescript/purescript-tuples.git"
+  },
   "ignore": [
     "**/.*",
     "bower_components",
     "node_modules",
     "output",
+    "test",
     "bower.json",
     "gulpfile.js",
     "package.json"
   ],
   "dependencies": {
-    "purescript-arrays": "~0.4.0",
-    "purescript-bifunctors": "~0.4.0"
+    "purescript-foldable-traversable": "~0.4.0"
   }
 }
