--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,6 @@
   "name": "purescript-tuples",
   "homepage": "https://github.com/purescript/purescript-tuples",
   "description": "Tuple data type and utility functions",
-  "keywords": [
-    "purescript"
-  ],
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -20,6 +17,6 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-foldable-traversable": "^0.4.0"
+    "purescript-foldable-traversable": "^1.0.0-rc.1"
   }
 }
