--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "purescript-foldable-traversable": "^3.0.0",
     "purescript-prelude": "^3.0.0",
-    "purescript-distributive": "^3.0.0"
+    "purescript-distributive": "^3.0.0",
+    "purescript-type-equality": "^2.1.0"
   }
 }
