--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,7 @@
 {
   "name": "purescript-tuples",
   "homepage": "https://github.com/purescript/purescript-tuples",
-  "description": "Tuple data type and utility functions",
-  "license": "MIT",
+  "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
     "url": "git://github.com/purescript/purescript-tuples.git"
@@ -17,9 +16,14 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-foldable-traversable": "#compiler/0.12",
-    "purescript-prelude": "#compiler/0.12",
-    "purescript-distributive": "#compiler/0.12",
-    "purescript-type-equality": "#compiler/0.12"
+    "purescript-bifunctors": "^4.0.0",
+    "purescript-control": "^4.0.0",
+    "purescript-distributive": "^4.0.0",
+    "purescript-foldable-traversable": "^4.0.0",
+    "purescript-invariant": "^4.0.0",
+    "purescript-maybe": "^4.0.0",
+    "purescript-newtype": "^3.0.0",
+    "purescript-prelude": "^4.0.0",
+    "purescript-type-equality": "^3.0.0"
   }
 }
