feat: Derive Generic instance (related to https://github.com/purescript/purescript-generics-rep/pull/34)

--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "purescript-control": "master",
     "purescript-distributive": "master",
     "purescript-foldable-traversable": "master",
+    "purescript-generics-rep": "master",
     "purescript-invariant": "master",
     "purescript-maybe": "master",
     "purescript-newtype": "master",
