--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,8 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-control": "^5.0.0",
-    "purescript-invariant": "^5.0.0",
-    "purescript-prelude": "^5.0.0"
+    "purescript-control": "master",
+    "purescript-invariant": "master",
+    "purescript-prelude": "master"
   }
 }
